Backend Spring: Modifico specs y services para mejorar el pager, filter y search